@@ -1,8 +1,9 @@
 Mon Jun  2 22:45:05 2003  Jeff Parsons <j.parsons@vanderbilt.edu>
 
         * ciao/ComponentsC.h:
+        * ciao/ComponentsS.h:
 
-          Contains the *C.h corresponding to the include in Components.idl.
+          Contains the *C.h and *S.h corresponding to the include in Components.idl.
 
 Mon Jun 02 12:47:50 2003  Nanbor Wang  <nanbor@cs.wustl.edu>
 
